sumo/tests/traci/VariableRetrieval/InductionLoop/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Tue Mar 10 14:58:10 2009


-> Command sent: <SimulationStep>:
  TargetTime=48.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <GetVariable>:
  domID=160 varID=255 objID=dummy
.. Answered with error to command (160), [description: Unsupported variable specified]

-> Command sent: <SimulationStep>:
  TargetTime=49.00 PosFormat=1
.. Command acknowledged (1), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
